--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
         <li>Video games</li>
         <li>Board games</li>
         <li>Photoshop</li>
-        <li>Listening to <a href= "https://open.spotify.com/user/milecal?si=HyC2JbH1TBGExwR_qLxKOw">music</a></li>
+        <li>Listening to music</li>
         <li>Biking</li>
         <li>Long walks and exploring</li>
         <li>Food</li>
