--- a/hobbies.html
+++ b/hobbies.html
@@ -16,7 +16,7 @@
         <li>Video games</li>
         <li>Board games</li>
         <li>Photoshop</li>
-        <li>Listening to <a href= "https://open.spotify.com/user/milecal?si=HyC2JbH1TBGExwR_qLxKOw" target="_blank">music</a></li>
+        <li>Listening to music</li>
         <li>Biking</li>
         <li>Long walks and exploring</li>
         <li>Food</li>
